# seqminer

./: .Rbuildignore  .gitignore  .travis.yml  ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  README.md  appveyor.yml  cleanup  configure  configure.ac
.github/workflows/: R-CMD-check.yaml  main.yml  rchk.yml
R/: genMakefile.R  seqminer.R
demo/: 00Index  meta.workflow.R  vcf.workflow.R
doc/: Manual.html.bak.09052013  annotation.html  benchmark.html  data.set.html  index.html
doc/benchmark/: README
doc/benchmark/data/: rand.chr1.range.100
doc/benchmark/extraction/seqminer/chr1.nonsyn.gene/: cmd.sh
doc/benchmark/extraction/seqminer/chr1.nonsyn.range/: script.oneByone.R
doc/benchmark/integration/gemini/: annotate.sh  import.sh
doc/script/: appendGA.py
docs/: Manual.html  Manual.html.bak.11112013  Tutorial.html  benchmark.html  version
docs/benchmark/: README
docs/benchmark/data/: rand.chr1.gene.100
docs/benchmark/extraction/seqminer/chr1.nonsyn.gene/: script.oneByone.R
docs/benchmark/extraction/va/chr1.nonsyn.gene/: script.chr1.readOneByOne.R
docs/benchmark/extraction/va/chr1.nonsyn.range/: script.chr1.readOneByOne.R
docs/benchmark/integration/gemini/: README
docs/benchmark/integration/seqminer/: annotate.R
docs/benchmark/integration/va/: README  annotate.R  cmd.sh
docs/script/: appendToc.py
inst/: CITATION
inst/benchmark/: seqminer2_benchmark_script.txt
inst/bgen/: all.anno.filtered.extract.bgen  all.anno.filtered.extract.bgen.bgi
inst/doc/: Manual.html
inst/plink/: all.anno.filtered.extract.bed  all.anno.filtered.extract.bim  all.anno.filtered.extract.fam
inst/rvtests/: cfh.refFlat.txt  rvtest.MetaScore.assoc.gz.tbi
inst/tabanno/: test.bed  test.dbNSFP.gz.tbi  test.fa.fai
inst/test-triallelic/: bi.MetaCov.assoc.gz.tbi  bi.MetaScore.assoc.gz.tbi  test2.study1.MetaScore.assoc.gz.tbi  test2.study2.MetaCov.assoc.gz.tbi  test2.study2.MetaScore.assoc.gz.tbi  test2.study3.MetaCov.assoc.gz.tbi  test2.study3.MetaScore.assoc.gz.tbi  tri.MetaCov.assoc.gz.tbi  tri.MetaScore.assoc.gz.tbi
inst/tests/: correct.Rdata
inst/vcf/: all.anno.filtered.extract.headerFixed.bcf.gz.scIdx  all.anno.filtered.extract.vcf.gz.scIdx
man/: SEQMINER.Rd  SeqMiner.Rd  addJob.Rd  annotateGene.Rd  annotatePlain.Rd  annotateVcf.Rd  createSingleChromosomeBCFIndex.Rd  createSingleChromosomeVCFIndex.Rd  download.annotation.resource.Rd  getCovPair.Rd  getRefBase.Rd  hasIndex.Rd  isBGENSupported.Rd  isDirWritable.Rd  isInRange.Rd  isTabixRange.Rd  isURL.Rd  makeAnnotationParameter.Rd  makeSureBGENSupported.Rd  newJob.Rd  newWorkflow.Rd  openPlink.Rd  readBGENToListByGene.Rd  readBGENToListByRange.Rd  readBGENToMatrixByGene.Rd  readBGENToMatrixByRange.Rd  readPlinkToMatrixByIndex.Rd  readSingleChromosomeBCFToMatrixByRange.Rd  readSingleChromosomeVCFToMatrixByRange.Rd  readVCFToListByGene.Rd  readVCFToListByRange.Rd  readVCFToMatrixByGene.Rd  readVCFToMatrixByRange.Rd  rvmeta.readCovByRange.Rd  rvmeta.readDataByGene.Rd  rvmeta.readDataByRange.Rd  rvmeta.readNullModel.Rd  rvmeta.readScoreByRange.Rd  rvmeta.readSkewByRange.Rd  rvmeta.writeCovData.Rd  (+11 more)
seqminer/: ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  config.status  configure  configure.ac  configure.win
seqminer/R/: seqminer.R
seqminer/demo/: 00Index  workflow.R
seqminer/inst/rvtests/: rvtest.MetaCov.assoc.gz.tbi  rvtest.MetaScore.assoc.anno.gz.tbi  rvtest.MetaSkew.assoc.gz.tbi
seqminer/inst/tabanno/: input.demo.vcf  input.test.plain.txt  input.test.vcf  priority.epact.txt  priority.txt  test.fa  test.gene.txt  tmp.vcf
seqminer/inst/tests/: correct.Rdata  testthat.R
seqminer/inst/vcf/: 1000g.phase1.20110521.CFH.var.anno.vcf.gz.tbi  all.anno.filtered.extract.bcf.gz.bci  all.anno.filtered.extract.vcf.gz.tbi
seqminer/man/: SeqMiner.Rd  annotateGene.Rd  annotatePlain.Rd  annotateVcf.Rd  getCovPair.Rd  hasIndex.Rd  makeAnnotationParameter.Rd  readVCFToListByGene.Rd  readVCFToListByRange.Rd  readVCFToMatrixByGene.Rd  readVCFToMatrixByRange.Rd  rvmeta.readCovByRange.Rd  rvmeta.readDataByGene.Rd  rvmeta.readDataByRange.Rd  rvmeta.readNullModel.Rd  rvmeta.readScoreByRange.Rd  rvmeta.readSkewByRange.Rd  rvmeta.writeCovData.Rd  rvmeta.writeScoreData.Rd  tabix.Rd  tabix.createIndex.Rd  tabix.createIndex.vcf.Rd  tabix.read.Rd  tabix.read.header.Rd  tabix.read.table.Rd  validateAnnotationParameter.Rd
seqminer/src/: AnnotationController.h  AnnotationInputFile.h  AnnotationOutputFile.h  AnnotationResult.h  AnnotationString.h  BCFReader.cpp  BedReader.h  Codon.h  Common.h  Exception.h  FileFormat.h  FreqTable.h  Gene.h  GeneAnnotation.h  GeneFormat.h  GeneLoader.cpp  GeneLoader.h  GenomeScore.h  GenomeSequence.h  IO.cpp  IO.h  LogFile.h  Makevars.in  Makevars.win  Maximum.h  ModelParser.h  OrderedMap.h  PatternMatch.cpp  PatternMatch.h  PeopleSet.cpp  PlinkInputFile.cpp  PlinkOutputFile.h  R_CPP_interface.cpp  R_CPP_interface.h  Range.h  RangeList.cpp  RangeList.h  Rannotation.cpp  Rannotation.h  SequenceUtil.h  (+52 more)
seqminer/tests/: .Rhistory  tests.R
src/: AnnotationOutput.h  AnnotationOutputFile.h  BCFHeader.h  BCFReader.cpp  BGenFile.cpp  BGenFile.h  BGenIndex.cpp  BGenIndex.h  BGenVariant.cpp  BGenVariant.h  BedReader.h  BitReader.h  Codon.h  CommonFunction.h  Exception.h  FileIO.cpp  FileIO.h  FreqTable.h  Gene.h  GeneAnnotation.h  GeneLoader.cpp  GenomeScore.h  GenomeSequence.h  HiCExtract.h  IO.h  Makevars.in  Makevars.win  MmapFile.cpp  MmapFile.h  ModelParser.h  OrderedMap.h  PeopleSet.cpp  PeopleSet.h  PlinkInputFile.cpp  PlinkInputFile.h  PlinkOutputFile.cpp  Priority.h  Profiler.cpp  Profiler.h  R_CPP_interface.cpp  (+50 more)
src/zstd/: config.status
src/zstd/lib/dictBuilder/: divsufsort.c
tests/: tests.R  testthat.R
tests/testthat/: test-triallelic.R  test-vcf.R
